# hello-world-python

./: LICENSE  README.md  main.py
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/src/: greet.cpp  greet.h  main.cpp
cpp/tests/: test_greet.cpp
tests/: test_main.py
