cmake_minimum_required(VERSION 3.10)
project(hello_world_cpp)
add_library(greet STATIC src/greet.cpp)
add_executable(hello_cpp src/main.cpp)
target_link_libraries(hello_cpp PRIVATE greet)
add_executable(test_greet tests/test_greet.cpp)
target_link_libraries(test_greet PRIVATE greet)
enable_testing()
add_test(NAME greet_test COMMAND test_greet)
